--- a/html/averageHappiness.html
+++ b/html/averageHappiness.html
@@ -1,3 +1,5 @@
 <div class="jumbotron text-center">
-    <h2>The Average Happiness Scale on The Happiness App</h2>
+    <h2>Average Happiness Score</h2>
+    <p>How happy are you right now?</p>
 </div>
+
