Added functionality for average and adding score

--- a/html/averageHappiness.html
+++ b/html/averageHappiness.html
@@ -3,3 +3,11 @@
     <p>How happy are you right now?</p>
 </div>
 
+<form
+      style="margin-top:30px;">
+		
+		<div >
+			Out of {{scores.length}} submissions, your happiness average is {{average}}.
+		</div>
+		
+</form>
