--- a/html/happinessScore.html
+++ b/html/happinessScore.html
@@ -16,8 +16,9 @@
         </input>
     </div>
     <button type="submit" class="btn btn-primary">Submit Score</button>
-	<div ng-repeat = "score in scores">
-{{score.score}} {{scores.length}}
-</div>
+	<div>
+	<br/>
+		You have logged your happiness {{scores.length}} times.
+	</div>
 </form>
 
