separated out functionality into different files.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <!-- JS (load angular, ui-router, and our application scripts) -->
     <script src="http://code.angularjs.org/1.2.13/angular.js"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.8/angular-ui-router.min.js"></script>
-   
+   <script src="scripts/average.js"></script>
+   <script src="scripts/listScores.js"></script>
 	<script src="scripts/listReasons.js"></script>
 	<script src="scripts/happyScores.js"></script>
 
